# issue-swc-aspect

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  bazel-bin  bazel-issue-swc-aspect  bazel-out  bazel-testlogs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
gen-swcrc/: BUILD.bazel  package.json
tools/ts/: BUILD.bazel  defs.bzl  generate.js  package.json  ts.bzl
