"""
MODULE
"""
module(name = "issue-swc", version = "1.0")

#
# Rules Aspect
#
# https://github.com/aspect-build/bazel-lib/releases
bazel_dep(name = "aspect_bazel_lib", version = "2.9.3")

#
# Rules JS
#
# https://github.com/aspect-build/rules_js/releases/
bazel_dep(name = "aspect_rules_js", version = "2.1.0")

#
# Rules NodeJS
#
# https://github.com/bazel-contrib/rules_nodejs/releases
bazel_dep(name = "rules_nodejs", version = "6.3.1")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "20.14.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
    npmrc = "@//:.npmrc",
)

use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

use_repo(pnpm, "pnpm")

#
# Rules TS
#
# https://github.com/aspect-build/rules_ts/releases/
bazel_dep(name = "aspect_rules_ts", version = "3.2.1")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)

rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)

bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib_toolchains.tar()

use_repo(rules_ts_ext, "npm_typescript")

#
# Rules SWC
#
# https://github.com/aspect-build/rules_swc/releases
bazel_dep(name = "aspect_rules_swc", version = "2.0.0")
